# quicksvg

./: .gitignore  CMakeLists.txt
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
src/: Main.cpp
